# python-error-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
error_agent/: __init__.py  agent.py  github_integration.py  google_chat.py  helpers.py  llm.py  slack.py  tools.py
examples/: fastapi_example.py
