[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "error-agent"
version = "0.1.0"
description = "An intelligent error handling and debugging agent for Python applications"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.68.0",
    "flask>=2.0.0",
    "requests>=2.26.0",
    "python-dotenv>=0.19.0",
    "slack-sdk>=3.19.0",
    "inspect2>=0.1.0",
    "typing-extensions>=4.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/error-agent"
Repository = "https://github.com/yourusername/error-agent.git"

[tool.hatch.build.targets.wheel]
packages = ["error_agent"] 